Release version 3.0.0
A near-complete rewrite targeting Android 14+ (API 34), fixing
long-standing bugs, improving performance, and using/supporting
modern Android features.

BREAKING CHANGE: Minimum supported Android version is now API 34
(Android 14).

- Updated animation logic to more faithfully mimic the original UQM
  animations
- Animation content is now read directly from the APK, instead of
  making a copy in the app cache, reducing the overall storage
  footprint
- Improved memory usage for the animations
- Independent Home/Lock screen configurations are now supported
- Bug fix: Backing out of a Live Wallpaper Preview without saving
  changes now restores the previous view(s).
- Replaced the scaling mode selector with continuous pinch-to-zoom;
  the zoom level is now set directly in the wallpaper preview
- Added InstallActivity: users can now set and configure the wallpaper
  from a launcher icon, without navigating system settings manually
- Added support for backups and device transfers, so that the wallpaper
  settings can follow you across device upgrades, etc.
- Updated builds to use Java 17, Gradle 9, Material 3, AGP 9
- Added unit tests
- Updated build scripts to throw meaningful errors if the required
  content packs are missing
- Updated build scripts to determine the package version from VCS
  tags, rather than manually editing files